--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
                     <!-- </div> -->
                 </div>
             </header>
-            <section class="mt-8 sm:mt-24 lg:mt-48 mx-auto container py-12 lg:px-4 xl:px-0 mx-auto container ">
+            <section class="mt-8 sm:mt-24 lg:mt-20 mx-auto container py-12 lg:px-4 xl:px-0 mx-auto container ">
                 <div class="flex flex-col sm:flex-col md:flex-row lg:flex-row">
                     <div class="flex flex-col lg:w-6/12 md:w-6/12 px-4 lg:px-0 justify-center items-start">
                         <p class="text-2xl text-gray-800 font-light">Hi! My name is</p>
-                        <h1 class="text-5xl sm:text-6xl md:text-4xl lg:text-6xl font-extrabold leading-tight text-gray-800 py-2">Liza George.</h1>
+                        <h1 class="text-5xl sm:text-6xl md:text-4xl lg:text-6xl font-extrabold leading-tight text-gray-800 pb-3 pt-1">Liza George.</h1>
                         <p class="text-lg text-gray-600 font-light leading-relaxed pt-2">I am a computer science student at the University of Illinois, Urbana Champaign. I love pushing myself in my studies and work, and get excited at any opportunity to learn something new.</p>
                         <p class="text-lg text-gray-600 font-light leading-relaxed pt-2">Welcome to my dev portfolio website! Scroll around to see a bit of my latest work and experiences. And if you want to get in touch…</p>
                         <a href="mailto:hi.liza.george@gmail.com" target="_blank" rel="noopener noreferrer">
-                            <button class="Sf-ui-pro mt-10 flex items-center text-xl custom-foreground-color font-regular custom-border-bottom pb-2 mr-3 focus:outline-none">
+                            <button class="Sf-ui-pro mt-8 flex items-center text-xl custom-foreground-color font-regular custom-border-bottom pb-2 mr-3 focus:outline-none">
                                 Connect with me
                                 <!-- TODO: hover action -->
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -85,7 +85,7 @@
                     <!-- TODO: update picture -->
                     <div class="xl-w-11/12 sm:w-1/2 mt-8 sm:mt-0">
                         <div class="flex items-center justify-center sm:justify-end w-full">
-                            <img loading="lazy" class="w-3/5" src="./assets/images/hero.png" alt="header image" />
+                            <img loading="lazy" class="w-3/4 m:w-4/5 pt-4" src="./assets/images/hero.png" alt="header image" />
                         </div>
                     </div>
                 </div>
