--- a/index.html
+++ b/index.html
@@ -111,11 +111,13 @@
             <!-- TODO: mobile - include images? maybe just v small (basically logo) image + header and date. -->
             <div class="flex flex-col sm:flex-row items-stretch mb-8 sm:mb-16 container mx-auto">
                 <div class="w-full sm:w-1/3 relative h- sm:h-auto">
-                    <img loading="lazy" class="w-full object-cover absolute inset-0 object-center h-full" src="./assets/images/section1_1.png" alt="decorative image" />
+                    <img loading="lazy" class="w-full object-cover absolute inset-0 object-center h-full" src="./assets/images/uber_logo.png" alt="decorative image" />
                 </div>
                 <div class="container mx-auto w-full sm:w-2/3 py-10 sm:py-16 lg:py-20 px-6 sm:px-12 lg:px-16 bg-gray-100">
-                    <h3 class="text-gray-800 text-2xl mb-3 leading-normal tracking-normal font-bold">Mobile App Revamp</h3>
-                    <p class="text-gray-600 leading-6 font-normal tracking-normal">Quae fuerit causa, nollem me tamen laudandis maioribus meis corrupisti nec segniorem ad. Sunt autem quibusdam et harum quidem se oratio, tua praesertim, qui haec subtilius.</p>
+                    <h3 class="text-gray-800 text-2xl mb-3 leading-normal tracking-normal font-bold">Uber SWE Internship</h3>
+                    <p class="text-gray-600 leading-6 font-normal tracking-normal">
+                        This was my first ever internship, and I learned a tremendous amount about software engineering! I was part of the Enterprise Billing team in the Money organization, where I first helped the team recover form a Code Yellow and then built an internal API for our operations team to query all U4B invoices. In the process, I learned how to work with Go, in a monorepo managed with Bazel, and then practiced using React to build my project’s interface. I also helped the on-call team and worked on documentation.
+                    </p>
                 </div>
             </div>
             <div class="flex flex-col sm:flex-row items-stretch mb-8 sm:mb-16 container mx-auto">
