added cssi info and pic

--- a/index.html
+++ b/index.html
@@ -134,20 +134,16 @@
             </div>
             <div class="flex flex-col sm:flex-row items-stretch mb-8 sm:mb-16 container mx-auto">
                 <div class="w-full sm:w-1/3 relative h- sm:h-auto">
-                    <img loading="lazy" class="w-full object-cover absolute inset-0 object-center h-full" src="./assets/images/section1_1.png" alt="decorative image" />
+                    <img loading="lazy" class="w-full object-cover absolute inset-0 object-center h-full" src="./assets/images/cssi.png" alt="decorative image" />
                 </div>
                 <div class="container mx-auto w-full sm:w-2/3 py-10 sm:py-16 lg:py-20 px-6 sm:px-12 lg:px-16 bg-gray-100">
-                    <h3 class="text-gray-800 text-2xl mb-3 leading-normal tracking-normal font-bold">Mobile App Revamp</h3>
-                    <p class="text-gray-600 leading-6 font-normal tracking-normal">Quae fuerit causa, nollem me tamen laudandis maioribus meis corrupisti nec segniorem ad. Sunt autem quibusdam et harum quidem se oratio, tua praesertim, qui haec subtilius.</p>
-                </div>
-            </div>
-            <div class="flex flex-col sm:flex-row items-stretch mb-8 sm:mb-16 container mx-auto">
-                <div class="container mx-auto w-full sm:w-2/3 py-10 sm:py-16 lg:py-20 px-6 sm:px-12 lg:px-16 bg-gray-100">
-                    <h3 class="text-gray-800 text-2xl mb-3 leading-normal tracking-normal font-bold">Mobile App Revamp</h3>
-                    <p class="text-gray-600 leading-6 font-normal tracking-normal">Quae fuerit causa, nollem me tamen laudandis maioribus meis corrupisti nec segniorem ad. Sunt autem quibusdam et harum quidem se oratio, tua praesertim, qui haec subtilius.</p>
-                </div>
-                <div class="w-full sm:w-1/3 relative h- sm:h-auto">
-                    <img loading="lazy" class="w-full object-cover absolute inset-0 object-center h-full" src="./assets/images/section1_1.png" alt="decorative image" />
+                    <h3 class="text-gray-800 text-2xl mb-3 leading-normal tracking-normal font-bold">Google CSSI Scholar</h3>
+                    <p class="text-gray-600 leading-6 font-normal tracking-normal">
+                        Google's Computer Science Summer Institute (CSSI) Program was a selective 4-week bootcamp for rising college freshman. During the program, I used the p5.js library to practice my knowledge of Javascript, learned from Google's volunteer instructors and engineers, and attended workshops to learn how to be a successful teammate and engineer. The program ended with a capstone project that I built and presented with my partner, where I used the p5.js library to replicate the arcade game Centipede.
+                    </p>
+                    <p class="text-gray-600 leading-6 font-normal tracking-normal">
+                        A full explanation of my time in CSSI and my capstone project can be viewed here - <u><a href="https://bit.ly/my-time-in-google-cssi"  target="_blank" rel="noopener noreferrer">https://bit.ly/my-time-in-google-cssi</a></u>.
+                    </p>
                 </div>
             </div>
 
