--- a/index.html
+++ b/index.html
@@ -177,11 +177,16 @@
                 <div class="pb-10 xl:pb-0 lg:flex md:flex xl:justify-around sm:flex flex-wrap md:justify-around sm:justify-around lg:justify-around">
                     <div class="xl:w-1/3 sm:w-5/12 sm:max-w-xs relative mb-10 lg:mb-20 xl:max-w-sm lg:w-1/2 w-full mx-auto sm:mx-0">
                         <div class="shadow h-64 rounded z-10">
-                            <img loading="lazy" src="./assets/images/blog1_1.png" alt="" class="h-full w-full object-cover overflow-hidden rounded-lg" />
+                            <img loading="lazy" src="./assets/images/InvoicesPageCensored.png" alt="" class="h-full w-full object-cover overflow-hidden rounded-lg" />
                         </div>
-                        <div class="px-10 sm:px-20 py-3 sm:py-6 shadow-lg w-11/12 mx-auto -mt-20 bg-white rounded z-20 relative">
-                            <h4 class="text-gray-800 text-lg text-center mb-2">Flat Icons Kit</h4>
-                            <p class="text-gray-600 text-lg text-center mb-2">PS - Sketch - XD</p>
+                        <div class="px-6 py-3 sm:py-6 shadow-lg w-11/12 mx-auto -mt-20 bg-white rounded z-20 relative">
+                            <h4 class="px-2 text-gray-800 text-lg text-center mb-2">Uber Intern Project (Invoices Page)</h4>
+                            <p class="text-gray-600 mb-2"> An API and corresponding interface that allows internal operations team to query and sort all B2B invoices. </p>
+                            <ul class="list-disc pl-4 marker:text-blue-500">
+                                <li>Built in Go, using protobuff protocol. </li>
+                                <li>Collaborated with another intern to connect API to his RTA table </li>
+                                <li>Learned how to use React and GraphQL to create Invoices Page interface that queries my API. </li>
+                            </ul>
                             <!-- TODO: more details link -->
                         </div>
                     </div>
