--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 
         <!-- Projects -->
         <section id="products" class="px-2 md:px-0 bg-gray-800">
-            <div class="container mx-auto pt-16 px-6 xl:px-0">
-                <h1 class="Sf-ui-pro text-white w-full xl:w-1/4 font-black text-2xl sm:text-4xl">My Projects</h1>
+            <div class="container mx-auto py-6 px-6 xl:px-0">
+                <h1 class="Sf-ui-pro text-white w-full xl:w-1/4 font-black text-3xl sm:text-4xl py-6 mb-2 text-center leading-normal tracking-normal font-bold" text-center>My Projects</h1>
                 <!-- <button class="Sf-ui-pro focus:outline-none my-8 flex items-center text-xl text-white font-regular border-b border-white pb-2 mr-3">
                     View all projects
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -187,25 +187,35 @@
                                 <li>Collaborated with another intern to connect API to his RTA table </li>
                                 <li>Learned how to use React and GraphQL to create Invoices Page interface that queries my API. </li>
                             </ul>
-                            <!-- TODO: more details link -->
+                            <!-- TODO: more details link in each -->
                         </div>
                     </div>
                     <div class="xl:w-1/3 sm:w-5/12 sm:max-w-xs relative mb-10 lg:mb-20 xl:max-w-sm lg:w-1/2 w-full mx-auto sm:mx-0">
-                        <div class="shadow h-64 rounded">
-                            <img loading="lazy" src="./assets/images/blog1_2.png" alt="" class="h-full w-full object-cover overflow-hidden rounded-lg" />
+                        <div class="shadow h-64 rounded z-10">
+                            <img loading="lazy" src="./assets/images/AssignmentAggregatorSCs.jpg" alt="" class="h-full w-full object-cover overflow-hidden rounded-lg" />
                         </div>
-                        <div class="px-10 sm:px-20 py-3 sm:py-6 shadow-lg w-11/12 mx-auto -mt-20 bg-white rounded z-20 relative">
-                            <h4 class="text-gray-800 text-lg text-center mb-2">Illustrations Library</h4>
-                            <p class="text-gray-600 text-lg text-center mb-2">Figma - Sketch - XD</p>
+                        <div class="px-6 py-3 sm:py-6 shadow-lg w-11/12 mx-auto -mt-20 bg-white rounded z-20 relative">
+                            <h4 class="px-2 text-gray-800 text-lg text-center mb-2">Assignment Aggregator App</h4>
+                            <p class="text-gray-600 mb-2"> A python script that collates a user student’s assignments from different online systems into their desired organizational tool. </p>
+                            <ul class="list-disc pl-4 marker:text-blue-500">
+                                <li>Group project for my university Software Development Fundamentals course.  </li>
+                                <li>I designed the output CSV format to be compatible with tools like Notion and Todoist </li>
+                                <li>Created the interface used to standardize input data from various sources (Canva, PrairieLearn, Moodle, etc.).   </li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="xl:w-1/3 sm:w-5/12 sm:max-w-xs relative lg:mb-20 xl:max-w-sm lg:w-1/2 w-full mx-auto sm:mx-0">
-                        <div class="shadow h-64 rounded">
-                            <img loading="lazy" src="./assets/images/blog1_3.png" alt="" class="h-full w-full object-cover overflow-hidden rounded-lg" />
+                    <div class="xl:w-1/3 sm:w-5/12 sm:max-w-xs relative mb-10 lg:mb-20 xl:max-w-sm lg:w-1/2 w-full mx-auto sm:mx-0">
+                        <div class="shadow h-64 rounded z-10">
+                            <img loading="lazy" src="./assets/images/InvoicesPageCensored.png" alt="" class="h-full w-full object-cover overflow-hidden rounded-lg" />
                         </div>
-                        <div class="px-10 sm:px-20 py-3 sm:py-6 shadow-lg w-11/12 mx-auto -mt-20 bg-white rounded z-20 relative">
-                            <h4 class="text-gray-800 text-lg text-center mb-2">Home App Concept</h4>
-                            <p class="text-gray-600 text-lg text-center mb-2">Figma - Sketch - XD</p>
+                        <div class="px-6 py-3 sm:py-6 shadow-lg w-11/12 mx-auto -mt-20 bg-white rounded z-20 relative">
+                            <h4 class="px-2 text-gray-800 text-lg text-center mb-2">Uber Intern Project (Invoices Page)</h4>
+                            <p class="text-gray-600 mb-2"> An API and corresponding interface that allows internal operations team to query and sort all B2B invoices. </p>
+                            <ul class="list-disc pl-4 marker:text-blue-500">
+                                <li>Built in Go, using protobuff protocol. </li>
+                                <li>Collaborated with another intern to connect API to his RTA table </li>
+                                <li>Learned how to use React and GraphQL to create Invoices Page interface that queries my API. </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
