--- a/index.html
+++ b/index.html
@@ -206,15 +206,15 @@
                     </div>
                     <div class="xl:w-1/3 sm:w-5/12 sm:max-w-xs relative mb-10 lg:mb-20 xl:max-w-sm lg:w-1/2 w-full mx-auto sm:mx-0">
                         <div class="shadow h-64 rounded z-10">
-                            <img loading="lazy" src="./assets/images/InvoicesPageCensored.png" alt="" class="h-full w-full object-cover overflow-hidden rounded-lg" />
+                            <img loading="lazy" src="./assets/images/SentimentAnalyzerSCs.jpg" alt="" class="h-full w-full object-cover overflow-hidden rounded-lg" />
                         </div>
                         <div class="px-6 py-3 sm:py-6 shadow-lg w-11/12 mx-auto -mt-20 bg-white rounded z-20 relative">
-                            <h4 class="px-2 text-gray-800 text-lg text-center mb-2">Uber Intern Project (Invoices Page)</h4>
-                            <p class="text-gray-600 mb-2"> An API and corresponding interface that allows internal operations team to query and sort all B2B invoices. </p>
-                            <ul class="list-disc pl-4 marker:text-blue-500">
-                                <li>Built in Go, using protobuff protocol. </li>
-                                <li>Collaborated with another intern to connect API to his RTA table </li>
-                                <li>Learned how to use React and GraphQL to create Invoices Page interface that queries my API. </li>
+                            <h4 class="px-2 text-gray-800 text-lg text-center mb-2"> Sentiment Analysis in Rust  </h4>
+                            <p class="text-gray-600 mb-2"> A tool that can output the overall sentiment (positivity and negativity) of an input text over time.  </p>
+                            <ul class="list-disc pl-4 marker:text-blue-s500">
+                                <li>Created a command-line interface for users to input either a CSV file of text and timestamps, or Twitter username to analyze sentiment of user Tweets over time.  </li>
+                                <li>CEntirely programmed in Rust as part of a university honors course project.  </li>
+                                <li>I implemented the MapReduce multithreading algorithm to improve performance time.  </li>
                             </ul>
                         </div>
                     </div>
