--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     <div class="flex flex-col lg:w-6/12 md:w-6/12 px-4 lg:px-0 justify-center items-start">
                         <p class="text-2xl text-gray-800 font-light">Hi! My name is</p>
                         <h1 class="text-5xl sm:text-6xl md:text-4xl lg:text-6xl font-extrabold leading-tight hero-color pb-3 pt-1">Liza George.</h1>
-                        <p class="text-lg text-gray-600 font-light leading-relaxed pt-2">I am a computer science student at the University of Illinois, Urbana Champaign. I love pushing myself in my studies and work, and get excited at any opportunity to learn something new.</p>
+                        <p class="text-lg text-gray-600 font-light leading-relaxed pt-2">I am a computer science student at the University of Illinois, Urbana Champaign and former Uber SWE Intern. I love pushing myself in my studies and work, and get excited at any opportunity to learn something new.</p>
                         <p class="text-lg text-gray-600 font-light leading-relaxed pt-2">Welcome to my dev portfolio website! Scroll around to see a bit of my latest work and experiences. And if you want to get in touch…</p>
-                        <a href="mailto:hi.liza.george@gmail.com" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.linkedin.com/in/george-liza/" target="_blank" rel="noopener noreferrer">
                             <button class="Sf-ui-pro mt-8 flex items-center text-xl highlight-color font-regular custom-border-bottom pb-2 mr-3 focus:outline-none">
                                 Connect with me
                                 <!-- TODO: hover action -->
