Try moving text of experiences section to separate json file

--- a/index.html
+++ b/index.html
@@ -124,8 +124,10 @@
         <!-- TODO: lines (highlihgt color) on either side of header? -->
         <h2 class="text-gray-800 text-3xl sm:text-4xl text-center pb-4 mb-3 leading-normal tracking-normal font-bold">My
             experiences</h2>
-        <!-- TODO: mobile - include images? maybe just v small (basically logo) image + header and date. -->
-        <div class="flex flex-col sm:flex-row items-stretch mb-8 sm:mb-16 container mx-auto">
+        <div id="experiencesContainer">
+
+        </div>
+        <!-- <div class="flex flex-col sm:flex-row items-stretch mb-8 sm:mb-16 container mx-auto">
             <div class="w-full sm:w-1/3 relative h- sm:h-auto">
                 <img loading="lazy" class="w-full object-cover absolute inset-0 object-center h-full"
                     src="./assets/images/uber_logo.png" alt="decorative image" />
@@ -134,7 +136,6 @@
                 <h3 class="text-gray-800 text-2xl mb-3 leading-normal tracking-normal font-bold">Uber SWE Internship
                 </h3>
                 <p class="text-gray-600 leading-6 font-normal tracking-normal">
-                    <!-- TODO: add dates -->
                     This was my first ever internship, and I learned a tremendous amount about software engineering! I
                     was part of the Enterprise Billing team in the Money organization, where I first helped the team
                     recover form a Code Yellow and then built an internal API for our operations team to query all U4B
@@ -183,21 +184,22 @@
                             rel="noopener noreferrer">https://bit.ly/my-time-in-google-cssi</a></u>.
                 </p>
             </div>
-        </div>
+        </div> -->
 
-        <!-- TODO: show fewer experiences on smaller screen and view all experiences should link to a page with all of them -->
-        <!-- <div class="mb-16 sm:mb-32 container mx-auto px-6 container mx-auto">
-                <button class="Sf-ui-pro  focus:outline-none flex items-center text-xl highlight-color font-regular custom-border-bottom pb-2 mr-3">
-                    View all projects
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" />
-                        <line x1="5" y1="12" x2="19" y2="12" />
-                        <line x1="15" y1="16" x2="19" y2="12" />
-                        <line x1="15" y1="8" x2="19" y2="12" />
-                    </svg>
-                </button>
-            </div> -->
     </section>
+
+    <!-- TODO: show fewer experiences on smaller screen and view all experiences should link to a page with all of them -->
+    <!-- <div class="mb-16 sm:mb-32 container mx-auto px-6 container mx-auto">
+                    <button class="Sf-ui-pro  focus:outline-none flex items-center text-xl highlight-color font-regular custom-border-bottom pb-2 mr-3">
+                        View all projects
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" />
+                            <line x1="5" y1="12" x2="19" y2="12" />
+                            <line x1="15" y1="16" x2="19" y2="12" />
+                            <line x1="15" y1="8" x2="19" y2="12" />
+                        </svg>
+                    </button>
+                </div> -->
 
     <!-- Projects -->
     <section id="products" class="px-2 md:px-0 bg-gray-800">
