--- a/index.html
+++ b/index.html
@@ -125,68 +125,7 @@
         <!-- TODO: lines (highlihgt color) on either side of header? -->
         <h2 class="text-gray-800 text-3xl sm:text-4xl text-center pb-4 mb-3 leading-normal tracking-normal font-bold">My
             experiences</h2>
-        <div id="experiencesContainer">
-
-        </div>
-        <!-- <div class="flex flex-col sm:flex-row items-stretch mb-8 sm:mb-16 container mx-auto">
-            <div class="w-full sm:w-1/3 relative h- sm:h-auto">
-                <img loading="lazy" class="w-full object-cover absolute inset-0 object-center h-full"
-                    src="./assets/images/uber_logo.png" alt="decorative image" />
-            </div>
-            <div class="container mx-auto w-full sm:w-2/3 py-10 sm:py-16 lg:py-20 px-6 sm:px-12 lg:px-16 bg-gray-100">
-                <h3 class="text-gray-800 text-2xl mb-3 leading-normal tracking-normal font-bold">Uber SWE Internship
-                </h3>
-                <p class="text-gray-600 leading-6 font-normal tracking-normal">
-                    This was my first ever internship, and I learned a tremendous amount about software engineering! I
-                    was part of the Enterprise Billing team in the Money organization, where I first helped the team
-                    recover form a Code Yellow and then built an internal API for our operations team to query all U4B
-                    invoices. In the process, I learned how to work with Go, in a monorepo managed with Bazel, and then
-                    practiced using React to build my project’s interface. I also helped the on-call team and worked on
-                    documentation.
-                </p>
-            </div>
-        </div>
-        <div class="flex flex-col sm:flex-row items-stretch mb-8 sm:mb-16 container mx-auto">
-            <div class="container mx-auto w-full sm:w-2/3 py-10 sm:py-16 lg:py-20 px-6 sm:px-12 lg:px-16 bg-gray-100">
-                <h3 class="text-gray-800 text-2xl mb-3 leading-normal tracking-normal font-bold">UIUC Computer Science
-                    Course Assistant</h3>
-                <p class="text-gray-600 leading-6 font-normal tracking-normal">
-                    In Spring 2022, I was a course assistant for Introduction to Computer Science II Honors, which is a
-                    student-run course that teaches programming fundamentals in Rust. I helped manage the course, and
-                    learned how use the Angular web framework on the job to add features to and maintain the course
-                    website. I also mentored three student teams building their semester projects, teaching best design
-                    practices and project planning.
-                </p>
-            </div>
-            <div class="w-full sm:w-1/3 relative h- sm:h-auto">
-                <img loading="lazy" class="w-full object-cover absolute inset-0 object-center h-full"
-                    src="./assets/images/uiuc.jpeg" alt="decorative image" />
-            </div>
-        </div>
-        <div class="flex flex-col sm:flex-row items-stretch mb-8 sm:mb-16 container mx-auto">
-            <div class="w-full sm:w-1/3 relative h- sm:h-auto">
-                <img loading="lazy" class="w-full object-cover absolute inset-0 object-center h-full"
-                    src="./assets/images/cssi.png" alt="decorative image" />
-            </div>
-            <div class="container mx-auto w-full sm:w-2/3 py-10 sm:py-16 lg:py-20 px-6 sm:px-12 lg:px-16 bg-gray-100">
-                <h3 class="text-gray-800 text-2xl mb-3 leading-normal tracking-normal font-bold">Google CSSI Scholar
-                </h3>
-                <p class="text-gray-600 leading-6 font-normal tracking-normal">
-                    Google's Computer Science Summer Institute (CSSI) Program was a selective 4-week bootcamp for rising
-                    college freshman. During the program, I used the p5.js library to practice my knowledge of
-                    Javascript, learned from Google's volunteer instructors and engineers, and attended workshops to
-                    learn how to be a successful teammate and engineer. The program ended with a capstone project that I
-                    built and presented with my partner, where I used the p5.js library to replicate the arcade game
-                    Centipede.
-                </p>
-                <p class="text-gray-600 leading-6 font-normal tracking-normal">
-                    A full explanation of my time in CSSI and my capstone project can be viewed here - <u><a
-                            href="https://bit.ly/my-time-in-google-cssi" target="_blank"
-                            rel="noopener noreferrer">https://bit.ly/my-time-in-google-cssi</a></u>.
-                </p>
-            </div>
-        </div> -->
-
+        <div id="experiencesContainer"> </div>
     </section>
 
     <!-- TODO: show fewer experiences on smaller screen and view all experiences should link to a page with all of them -->
