Add msoft and research to portfolio

--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
     <!-- Experiences Section -->
     <section class="px-2 md:px-20">
         <!-- TODO: lines (highlihgt color) on either side of header? -->
-        <h2 class="text-gray-800 text-3xl sm:text-4xl text-center pb-4 mb-3 leading-normal tracking-normal font-bold">My
+        <h2 class="text-gray-800 text-3xl sm:text-4xl text-center pb-4 mb-3 leading-normal tracking-normal font-bold">
+            My
             experiences</h2>
         <div id="experiencesContainer"> </div>
     </section>
