Update about me

--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
                     <h1
                         class="text-5xl sm:text-6xl md:text-4xl lg:text-6xl font-extrabold leading-tight hero-color pb-3 pt-1">
                         Liza George.</h1>
-                    <p class="text-lg text-gray-600 font-light leading-relaxed pt-2">I am a computer science student at
-                        the University of Illinois, Urbana Champaign and former Uber SWE Intern. I love pushing myself
+                    <p class="text-lg text-gray-600 font-light leading-relaxed pt-2">I am a student at
+                        the University of Illinois, Urbana Champaign pursuing a joint BS+MCS degree in computer science.
+                        I've previously held SWE internship positions at Microsoft and Uber, and currently work
+                        as a Research Intern and Course Assistant on campus. I love pushing myself
                         in my studies and work, and get excited at any opportunity to learn something new.</p>
                     <p class="text-lg text-gray-600 font-light leading-relaxed pt-2">Welcome to my dev portfolio
                         website! Scroll around to see a bit of my latest work and experiences. And if you want to get in
